--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" href="/icofont/icofont.min.css">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+
 
   <title>Laika</title>
 </head>
@@ -65,6 +73,9 @@
       </div>
   </div>
   </div>
+
+
+  
 <div >
   <nav class="navbar sticky-top navbar-expand-lg  " style="background-color: #603e85;">
     <div class="container">
@@ -110,7 +121,7 @@
           <img src="img/LaikaMascotas.svg">
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #603e85;">
+          <a class="nav-link dropdown-toggle" href="./perro.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #603e85;">
             <img src="img/dog_mc.svg"> Compra para perro
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -119,25 +130,25 @@
                 <div class="col-md-4">
                   <ul class="nav flex-column">
                   <li class="nav-item"style="color: #603e85;">
-                    <a class="nav-link" href="#"><img src="img/icon_alimento.png" height="30">Alimento</a>
+                    <a class="nav-link" href="./perro.html"><img src="img/icon_alimento.png" height="30">Alimento</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="img/icons_snacks.png" height="30">Snacks</a>
+                    <a class="nav-link" href="./perro.html"><img src="img/icons_snacks.png" height="30">Snacks</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="img/icons_farmacia.png" height="30">Farmapet</a>
+                    <a class="nav-link" href="./perro.html"><img src="img/icons_farmacia.png" height="30">Farmapet</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="img/icons_higiene.png" height="30">Cuidado e Higiene</a>
+                    <a class="nav-link" href="./perro.html"><img src="img/icons_higiene.png" height="30">Cuidado e Higiene</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="img/icons_Juguetes.png" height="30">Juguetes</a>
+                    <a class="nav-link" href="./perro.html"><img src="img/icons_Juguetes.png" height="30">Juguetes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="img/icons_accesorios.png" height="30">Accesorios</a>
+                    <a class="nav-link" href="./perro.html"><img src="img/icons_accesorios.png" height="30">Accesorios</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="img/icons_petlover.png" height="30">Para Petlovers</a>
+                    <a class="nav-link" href="./perro.html"><img src="img/icons_petlover.png" height="30">Para Petlovers</a>
                   </li>
                 </ul>
                 </div>
@@ -153,7 +164,7 @@
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #603e85;">
+          <a class="nav-link dropdown-toggle" href="./gato.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #603e85;">
             <img src="img/cat_mc_s.svg"> Compra para gato
           </a>
 
@@ -163,25 +174,25 @@
                   <div class="col-md-4">
                     <ul class="nav flex-column">
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img src="img/icon_alimento.png" height="30">Alimento</a>
+                      <a class="nav-link" href="./gato.html"><img src="img/icon_alimento.png" height="30">Alimento</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img src="img/icons_snacks.png" height="30">Snacks</a>
+                      <a class="nav-link" href="./gato.html"><img src="img/icons_snacks.png" height="30">Snacks</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img src="img/icons_farmacia.png" height="30">Farmapet</a>
+                      <a class="nav-link" href="./gato.html"><img src="img/icons_farmacia.png" height="30">Farmapet</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img src="img/icons_higiene.png" height="30">Cuidado e Higiene</a>
+                      <a class="nav-link" href="./gato.html"><img src="img/icons_higiene.png" height="30">Cuidado e Higiene</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img src="img/icons_Juguetes.png" height="30">Juguetes</a>
+                      <a class="nav-link" href="./gato.html"><img src="img/icons_Juguetes.png" height="30">Juguetes</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img src="img/icons_accesorios.png" height="30">Accesorios</a>
+                      <a class="nav-link" href="./gato.html"><img src="img/icons_accesorios.png" height="30">Accesorios</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img src="img/icons_petlover.png" height="30">Para Petlovers</a>
+                      <a class="nav-link" href="./gato.html"><img src="img/icons_petlover.png" height="30">Para Petlovers</a>
                     </li>
                   </ul>
                   </div>
@@ -268,24 +279,7 @@
   </nav>
 
 
-  <script>
-  $(document).ready(function() {
-   $(window).resize(function(){
-     if ($(window).width() >= 1024){
 
-         $(".navbar .dropdown-toggle").hover(function () {
-            $(this).parent().toggleClass("show");
-            $(this).parent().find(".dropdown-menu").toggleClass("show"); 
-          });
-
-         $( ".navbar .dropdown-menu" ).mouseleave(function() {
-           $(this).removeClass("show");
-         });
-
-     }
-   });
-
-   });</script>
   </nav>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
